# gobase

./: .editorconfig  .env.example  .gitignore  .golangci.yml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  e2e_test.sh  go.mod  go.sum  plan.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/auth/: main.go
app/cleanup/: main.go
app/controlplane/: main.go
app/functions/: main.go
app/gateway/: main.go
app/migrate/: main.go
app/orchestrator/: main.go
app/realtime/: main.go
app/rest/: main.go
app/storage/: main.go
benchmarks/: README.md  auth.js  concurrent.js  full-suite.js  rest.js
cmd/gobase/: main.go
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: todo.html
dashboard/src/: App.tsx  index.css
docs/: DEPLOYMENT.md  openapi.yaml
docs/deploy/: aws.md  digitalocean.md  docker-compose.md  kubernetes.md
docs/internal/: COMPETITIVE-ANALYSIS.md  DASHBOARD-POLISH.md  FEATURE-AUDIT.md  POSITIONING.md  VALUE-PROP.md
docs/pitch/: deck.md  executive-summary.md  financial-model.md
examples/: README.md
examples/blog/: index.ts  package.json
examples/chat-app/: index.ts  package.json
examples/file-manager/: index.ts  package.json
examples/saas-starter/: index.ts  package.json
examples/todo-cli/: index.ts  package.json  (+1 more)
sdk/: README.md  package.json
sdk/python/: pyproject.toml
website/: index.html  package-lock.json  package.json
(+105 files in other folders)
