[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gobase"
version = "0.1.0"
description = "Python client for GoBase — open-source BaaS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://github.com/infocrud/gobase"
Documentation = "https://github.com/infocrud/gobase/blob/main/docs/openapi.yaml"

[tool.setuptools.packages.find]
where = ["."]
include = ["gobase*"]
